crates/general/fixtures/invalid/bracket_mismatch.zt
-- Expected: parse-error (≥1 diagnostic + lossless round-trip)
-- Spec: syntax §4 — opening and closing bracket tokens must match.
-- Mismatched pairs: `{…]`, `[…)`, `(…]`; unclosed `match` brace; incomplete `if-then` (no `else`);
-- lone backslash `\x` (backslash in expression position is not valid in v0).

{ a = 1 ]

[ 1; 2; )

( 1, 2 ]

match x { _ => 1

if c then a

\x
